# sandbox

./: README.md
boilerplate/fullstack-node/: .gitignore  README.md  package.json
concepts/algorithms-data-structures/: ProblemSolvingSteps.md  frequency_pattern.js
concepts/algorithms-data-structures/anagrams/: index.js
concepts/algorithms-data-structures/capitalize/: index.js
concepts/algorithms-data-structures/chunk/: index.js
concepts/algorithms-data-structures/fib/: index.js
concepts/algorithms-data-structures/fizzbuzz/: index.js
concepts/algorithms-data-structures/matrix/: index.js
concepts/algorithms-data-structures/maxchar/: index.js
concepts/blockchain/: chain-util.js  package-lock.json  package.json
concepts/ci-cd-fe/: .prettierrc  package-lock.json  package.json  vite.config.ts
concepts/machine-learning/: README.md  ml_template.ipynb  pyproject.toml
concepts/machine-learning/.devcontainer/: devcontainer.json
concepts/machine-learning/data-preprocessing/: data_preprocessing_template.ipynb  data_preprocessing_tools.ipynb
concepts/machine-learning/regression/: decision_tree.ipynb  multiple_linear.ipynb  multiple_linear_regression.ipynb  polynomial_linear.ipynb  simple_linear_regression.ipynb  svr.ipynb
concepts/redis-streams/: .formatter.exs  .gitignore  Dockerfile.develop  README.md  mix.exs
languages/javascript/: binaryTree.js  classes.js  countingValleys.js  dijkstra.js  fib.js  hash.js  minPower.js  mockAPI.js  numberOfMoves.js  optimize.js  pairs.js  predators.js  promises.js  sockMerchant.js  voting.js
(+319 files in other folders)
