[tool.poetry]
name = "machine-learning"
version = "0.0.0"
description = "Project to learn how machine learning works"
authors = ["Marcus Virginia <marcusvirg345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
